fixes tweet flex items spacing for window resize

--- a/styles/main.css
+++ b/styles/main.css
@@ -373,7 +373,7 @@ hr {
 
 .tweets{
   display:flex;
-  justify-content: space-between;
+  justify-content: start;
   flex-wrap: wrap;
   gap:4em;
 }
